# 2026_ROKEY_RL-Avoid-Obstacle

./: .gitignore  README.md
docs/: emergency_stop.md  node_architecture_2026-07-08.drawio  node_architecture_2026-07-09.drawio
hmi/: .gitignore  README.md
hmi/backend/: .env.example  app.py  config.py  requirements.txt  run.py  schema_registry.py
hmi/backend/api/: db.py  health.py  robot_control.py  worldmap.py
hmi/backend/readers/: pick_log_reader.py  voice_log_reader.py  worldmap_reader.py
hmi/backend/sockets/: browser_ns.py  ros_ns.py  state.py
hmi/backend/tests/: test_db_api.py  test_smoke.py
hmi/frontend/: .env.example  index.html  package-lock.json  package.json
hmi/frontend/src/: App.jsx  index.css  main.jsx
hmi/frontend/src/api/: client.js  socket.js
hmi/frontend/src/components/layout/: AppShell.css  AppShell.jsx  Header.jsx  SafetyBanner.jsx  Sidebar.jsx
hmi/frontend/src/components/pages/: DatabasePage.jsx  PerformancePage.jsx  SettingsPage.jsx
hmi/frontend/src/components/panels/: GraspAngleGauge.jsx  KpiStrip.jsx  LogPanel.css  LogPanel.jsx  NodeStatus.jsx  RlErrorTrend.jsx  RobotViewer.css  RobotViewer.jsx  SafetyStatus.jsx  SystemInfo.jsx  TaskProgress.css  TaskProgress.jsx  VisionPanel.jsx  VoiceConsole.css  VoiceConsole.jsx  ZAxisAlignGauge.jsx
hmi/frontend/src/components/viewer3d/: ObstacleMap.jsx  PointCloud.jsx  RobotModel.jsx  Scene.jsx  TargetMarker.jsx  TrajectoryLine.jsx
hmi/frontend/src/constants/: safety.js
hmi/frontend/src/hooks/: useBridgeStatus.js  useDbData.js  useGraspAngleDelta.js  useRlReachProgress.js  useSafetyStatus.js  useSystemHealth.js  useTaskStatus.js  useVisionStream.js  useVoiceStatus.js  useWorldMapScan.js
hmi/frontend/src/mock/: data.js
hmi/frontend/src/styles/: tokens.css
hmi/schemas/: command.schema.json  command_ack.schema.json  command_result.schema.json  safety_status.schema.json  task_status.schema.json  task_status_event.schema.json
src/hmi_bridge/: package.xml  setup.cfg  setup.py
src/hmi_bridge/hmi_bridge/: app.py  worldmap_loader.py
src/hmi_bridge/static/css/: style.css
src/hmi_bridge/static/js/: world_map_viewer.js
src/hmi_bridge/templates/: world_map.html
src/hmi_interface/: package.xml  setup.cfg  setup.py
src/hmi_interface/hmi_interface/: app.py  pick_log_reader.py  vision_bridge.py  voice_bridge.py  voice_log_reader.py  worldmap_catalog_reader.py
src/hmi_interface/templates/: index.html
src/hmi_ros_bridge/: package.xml  setup.cfg  setup.py
src/hmi_ros_bridge/hmi_ros_bridge/: bridge_node.py  emit_channel.py  main.py  socketio_worker.py  vision_stream_node.py
src/hmi_ros_bridge/launch/: hmi_bringup.launch.py
src/hmi_ros_bridge/test/: test_bridge_node.py  test_emit_channel.py  test_sigint_shutdown.py  test_vision_stream_node.py
src/my_robot_pkg/: package.xml  setup.py
src/my_robot_pkg/launch/: pnp_bringup.launch.py
src/my_robot_pkg/my_robot_pkg/: brain_node.py  dsr_policy_path.py  gripper.py  gripper_width_probe.py  motion_executor.py  motion_node.py  pick_logger.py  robot_action_node.py  visualize_grasp_log.py
src/my_robot_pkg/resource/: T_gripper2camera.npy  model_10000_obs_avoid.pt  model_14000_smooth.pt
src/my_robot_pkg/test/: test_brain_node_task_status.py
src/object_detection/: package.xml  setup.py
src/object_detection/object_detection/: angle_probe.py  depth_probe.py  detection.py  realsense.py  webcam_camera_probe.py  yolo.py  yolo_probe.py
src/object_detection/resource/: class_name_tool.json
src/object_detection/test/: test_hand_detection_logic.py
src/obstacle_avoidance/: package.xml  setup.py
src/obstacle_avoidance/obstacle_avoidance/: rl_avoidance_node.py
src/obstacle_avoidance_msgs/: CMakeLists.txt  package.xml
src/obstacle_avoidance_msgs/msg/: AvoidanceCmd.msg  WorldMapObstacle.msg  WorldMapUpdate.msg
src/od_msg/: CMakeLists.txt
src/od_msg/srv/: SrvDepthPosition.srv  SrvVisibilityCheck.srv
src/pointcloud_perception/: package.xml  setup.cfg  setup.py
src/pointcloud_perception/pointcloud_perception/: animate_worldmap_accumulation.py  offline_hough_circle_validation.py  offline_icp_experiment.py  offline_obstacle_experiment.py  pointcloud_node.py  visualize_obstacle_pipeline.py  world_map_algo.py  world_map_node.py
src/pointcloud_perception/test/: test_world_map_task_status.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: MoveTo.action  Pick.action  Place.action
src/robot_interfaces/msg/: SafetyState.msg
src/safety_monitor/: package.xml  setup.py
src/safety_monitor/safety_monitor/: safety_monitor_node.py
src/voice_interface/: package.xml  setup.py
src/voice_interface/voice_interface/: audio_level.py  robot_get_keyword_node.py  stt.py  tts.py  voice_logger.py  wakeup_word.py
