<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_interface</name>
  <version>0.0.0</version>
  <description>음성 명령을 받아 STT+LLM으로 pick&amp;place 키워드를 추출하는 get_keyword_node (cobot_ws/pick_and_place_voice에서 이전)</description>
  <maintainer email="poi3824@gmail.com">soo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
